@@ -9,31 +9,41 @@ from jinja2 import Environment, FileSystemLoader, StrictUndefined
 logger = logging.getLogger(__name__)
 
 
-class Renderer(object):
+def loadEnv(path):
+    """ Load environment for given path
+    """
+    loader = loader = FileSystemLoader(path)
+    return Environment(loader=loader, undefined=StrictUndefined)
+
+
+class FolderRenderer(object):
+    """ Render all templates to target
+    """
 
     def __init__(self, templatePath, contextPath, targetPath):
         self.templatePath = templatePath
         self.targetPath = targetPath
         self.contextPath = contextPath
-        self._buildEnv()
-        self._loadContext()
 
     def renderAll(self):
         self._cleanupTarget()
         folder = os.path.relpath(self.templatePath,
                                  os.path.dirname(self.templatePath))
-        for t in self.env.list_templates():
-            template = self.env.get_template(t)
+        context = PyReader.loadFile(self.contextPath)
+        env = loadEnv(self.templatePath)
+        renderer = Renderer(env, context)
+        for t in env.list_templates():
             path = os.path.realpath(os.path.join(self.targetPath,
                                                  folder,
                                                  t))
-            parent = os.path.dirname(path)
-            if not os.path.exists(parent):
-                logger.debug('creating folder %s', parent)
-                os.makedirs(parent)
-            with file(path, 'w+') as f:
-                logger.debug('generating %s', t)
-                template.stream(self.context).dump(f)
+            self._createContainingFolder(path)
+            renderer.render(t, path)
+
+    def _createContainingFolder(self, path):
+        parent = os.path.dirname(path)
+        if not os.path.exists(parent):
+            logger.debug('creating folder %s', parent)
+            os.makedirs(parent)
 
     def _cleanupTarget(self):
         for subdir in os.listdir(self.targetPath):
@@ -41,23 +51,30 @@ class Renderer(object):
             logger.debug('removing folder %s', path)
             shutil.rmtree(path)
 
-    def _buildEnv(self):
-        loader = loader = FileSystemLoader(self.templatePath)
-        self.env = Environment(loader=loader,
-                               undefined=StrictUndefined)
 
-    def _loadContext(self):
-        path = os.path.abspath(self.contextPath)
-        with file(path, 'rb') as f:
-            self.context = PyReader.load(f)
+class Renderer(object):
+
+    def __init__(self, env, context):
+        self.env = env
+        self.context = context
+
+    def render(self, tempPath, targetPath):
+        template = self.env.get_template(tempPath)
+        with file(targetPath, 'w+') as f:
+            logger.debug('generating %s', tempPath)
+            template.stream(self.context).dump(f)
 
 
 class PyReader(object):
 
     @classmethod
-    def load(cls, f):
-        l = {}
-        g = {}
+    def loadFile(cls, path, l={}, g={}):
+        absPath = os.path.abspath(path)
+        with file(absPath, 'rb') as f:
+            return cls.load(f)
+
+    @classmethod
+    def load(cls, f, l={}, g={}):
         sys.path.append(os.path.dirname(f.name))
         exec(f, g, l)
         if '__all__' in l:
@@ -90,6 +107,7 @@ def main():
         'target_path',
         help='The directory where the rendered files will be stored.')
     args = parser.parse_args()
-    Renderer(args.template_path,
-             args.context_path,
-             args.target_path).renderAll()
+    FolderRenderer(
+        args.template_path,
+        args.context_path,
+        args.target_path).renderAll()
